force-app/main/default/objects/leankor__KeyInitiativeCoreProcess__c/leankor__KeyInitiativeCoreProcess__c.object-meta.xml
<CustomObject>
    <description>This is an aggregation object which relates a key initiative to any number of value streams and zones (maybe even kanban cards if a card refers to a make-or-break project).</description>
    <label>Critical Process</label>
    <nameField>
        <displayFormat>CoreProcess-{000000000}</displayFormat>
        <label>Key Initiative Core Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critical Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>