force-app/main/default/objects/leankor__KeyInitiativeCoreProcess__c/fields/leankor__KeyInitiative__c.field-meta.xml
<CustomField>
    <fullName>leankor__KeyInitiative__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A key initiative is a set of related projects which leverage critical value streams within the enterprise.  An initiative can rely on one or more value streams and/or zones (sub-processes owned by named teams).</description>
    <inlineHelpText>Select a key initiative.A key initiative is a set of related projects which leverage critical value streams within the enterprise.  An initiative can rely on one or more value streams and/or zones (sub-processes owned by named teams).</inlineHelpText>
    <label>Key Initiative</label>
    <referenceTo>leankor__KeyInitiative__c</referenceTo>
    <relationshipLabel>Key Initiative Core Processes</relationshipLabel>
    <relationshipName>KeyInitiativeCoreProcesses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>