force-app/main/default/objects/leankor__KeyInitiativeCoreProcess__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Core process to achieve this Key Initiative.</description>
    <inlineHelpText>This is an optional field. Select a core process which is critical in achieving goals set out by this key initiative.  This value stream may or may not be related to the zone you enter on this page.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Critical Processes</relationshipLabel>
    <relationshipName>KeyInitiativeCoreProcesses</relationshipName>
    <type>Lookup</type>
</CustomField>