force-app/main/default/objects/leankor__KeyInitiativeCoreProcess__c/fields/leankor__Zone__c.field-meta.xml
<CustomField>
    <fullName>leankor__Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key initiatives may have one or more sub-processes within value streams which are a critical make-or-break part of success.</description>
    <inlineHelpText>Select a zone (sub-process owned by a specific team in the enterprise) which is critical to achieving this key initiative. NOTE: The zone does not have to be related to the value stream entered on this page, nor do you have to select a value stream.</inlineHelpText>
    <label>Zone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leankor__Zone__c.leankor__ValueStream__c</field>
            <operation>equals</operation>
            <valueField>$Source.leankor__ValueStream__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leankor__Zone__c</referenceTo>
    <relationshipLabel>Key Initiative Core Processes</relationshipLabel>
    <relationshipName>KeyInitiativeCoreProcesses</relationshipName>
    <type>Lookup</type>
</CustomField>